css/styles.css
@import url("https://fonts.googleapis.com/css2?family=Ubuntu&display=swap");
:root {
  --blue: rgb(7, 134, 62);
}

* {
  font-family: "Ubuntu", sans-serif;
  margin: 0;
  scroll-behavior: smooth;
}

body {
  color: #222;
  width: 100%;
}

::selection {
  background-color: rgba(3, 150, 67, 0.5);
}
/***********
Main Styles
***********/

h1 {
  padding-top: 10%;
  color: #fff;
  text-align: center;
  font-size: 4em;
}

aside {
  float: right;
  border-left: 1px solid #333;
  padding: 5px;
  display: flex;
  width: 20%;
  text-align: center;
  font-size: 1.4em;
  line-height: 30px;
  margin-top: 10px;
}

.discription {
  margin: 20px;
  display: inline;
}

.main-content {
  width: 100%;
  overflow-y: visible;
}

.content {
  margin-top: 20px;
  width: 100%;
  overflow-y: visible;
}
/**********
 Item Cards
***********/

.cards {
  width: 100%;
  box-sizing: border-box;
   overflow-x: hidden;
  overflow-y: hidden;
  /* height: 490px;*/
  min-height: 480px;
  padding-top: 20px;
}

.item-card {
  position: relative;
  float: left;
  width: calc(25% - 20px);
  height: 400px;
  margin: 10px;
  /*margin-left: auto;*/
  border-radius: 20px;
  box-shadow: 2px 2px 10px rgb(34, 34, 34);
  overflow: hidden;
  padding-bottom: 20px;
  /* min-width: 300px;
  max-width: 400px;*/
  transition: transform 0.5s, box-shadow 0.5s;
}

.item-card:hover {
  transform: scale(1.07) rotate(-0.5deg);
  box-shadow: 13px 12px 15px rgba(58, 58, 58, 0.63);
  z-index: 1;
  transition: transform 0.5s, box-shadow 0.5s;
}

.item-card div.img {
  height: 250px;
  overflow: hidden;
}

.item-card div.img img {
  width: 100%;
  border-radius: 20px 20px 0 0;
  margin: 0;
}

.item-card h2,
.item-card p,
.item-card a {
  margin-left: 10px;
}

.item-card a {
  /*margin-top: 30px;*/
  display: inline;
  position: relative;
  /* width: 50px;*/
  top: 60px;
}

.item-card h2 {
  font-size: 25px;
}

.item-card div.img img.sixteen-to-nine {
  height: 200px;
}
/************
 Hero Styles
************/

.hero {
  background-image: url(../img/neff-cut-lawn.jpg);
  background-color: rgb(195, 230, 191);
  background-blend-mode: multiply;
  background-size: 120%;
  background-repeat: no-repeat;
  background-attachment: fixed;
  width: 100%;
  height: 100vh;
  max-height: calc(100vh - 205px);
  position: relative;
  text-shadow: 4px 4px 7px #111;
  z-index: 0;
  transition: text-shadow 1s, font-size 1s, max-height 1s, background-size 1s;
}

.hero h1 {
  font-size: calc(10vw - 30px);
}

.hero summary {
  font-size: 20px;
  text-align: center;
  line-height: 27px;
  background-image: linear-gradient(
    to right,
    #ffffff00,
    #20202090,
    #222,
    #20202090,
    #ffffff00
  );
  color: #fff;
  margin: 40px 0 0 calc(50% - 175px);
  width: 350px;
  padding: 5px 0 5px 0;
}

.hero div,
.hero p {
  text-align: center;
  margin-top: 70px;
  color: #fff;
  /*transition: margin .3s;*/
}

.hero > div.bible {
  position: absolute;
  bottom: 10px;
  /*height: 30px;*/
  width: 100%;
  margin: 0;
  padding: 0;
  display: flex;
  justify-content: center;
  /*pointer-events: none;*/
  overflow: visible;
}

.hero div.bible > p.bible-inner {
  /* text-justify: center;*/
  /*text-align: center;*/
  padding: 10px;
  background-image: radial-gradient(
    #00000079,
    #00000079,
    #0000004b,
    #00000000,
    #00000000
  );
  background-size: 95%;
  text-shadow: 4px 4px 3px #000000;
  overflow: visible;
}

/*
.hero > p:hover {
  margin-top: 54px;
  transition: margin .3s;
}*/

.hero a,
.item-card a {
  width: 300px;
  text-align: center;
  color: azure;
  font-size: 30px;
  text-decoration: none;
  text-shadow: 4px 4px 7px #111;
  padding: 8px;
  background-color: rgb(189, 0, 0);
  border-radius: 10px;
  box-shadow: 2px 2px 7px #111, 0 0 0 1px rgb(80, 0, 0);
  /* border: 1px solid rgb(114, 0, 0);*/
  border-top: 0 solid rgb(114, 0, 0);
  border-bottom: 3px solid rgb(114, 0, 0);
  /* b: sienna 1px solid;*/
  transition: box-shadow 0.5s, font-size 0.5s, border-top 0.3s,
    border-bottom 0.3s, text-shadow 0.5s;
}

.hero a:hover,
.item-card a:hover {
  font-size: 30.5px;
  text-shadow: 0px 0px 4px #111;
  /*border: 1.5px solid rgb(114, 0, 0);*/
  border-top: 4px solid rgb(114, 0, 0);
  border-bottom: 0 solid rgb(114, 0, 0);
  box-shadow: 5px 10px 20px #151515, 0 0 0 1px rgb(80, 0, 0);
  transition: box-shadow 0.5s, font-size 0.5s, border-top 0.3s,
    border-bottom 0.3s, text-shadow 0.5s;
}

.hero a i,
.item-card a > i {
  margin-left: 0;
  transition: margin 0.4s;
  transform: translateY(1px);
}

.hero a:hover > i,
.item-card a:hover i {
  margin-left: 3px;
  animation-name: hero-button;
  transition: padding 0.4s;
  animation-duration: 0.8s;
  animation-fill-mode: forwards;
  animation-iteration-count: infinite;
}

@keyframes hero-button {
  0% {
    margin-left: 0;
    margin-right: 0;
  }
  20% {
    margin-left: 3px;
    margin-right: -3px;
  }
  30% {
    margin-left: 2px;
    margin-right: -2px;
  }
  40% {
    margin-left: 0px;
    margin-right: 0px;
  }
  60% {
    margin-left: 5px;
    margin-right: -5px;
  }
  80% {
    margin-left: 4px;
    margin-right: -4px;
  }
  100% {
    margin-left: 0px;
    margin-right: 0;
  }
}
/*.main-content {
  margin: 0 20% 0 20%;
  background-color: #999;
  height: 100%;
}*/

/***************
 Nav-Bar Styles
***************/

.topnav {
  background-color: #333;
  overflow: hidden;
  position: sticky !important;
  top: 0;
  width: 100%;
  min-height: 47px;
  z-index: 2;
}

.topnav a.float-right {
  float: right;
}

.topnav a:first-child .small {
  font-size: 15px;
  font-weight: 500;
  font-stretch: narrower;
}
.topnav a:first-child i {
  font-size: 1.5em;
  position: absolute;
  left: 5px;
  top: 10px;
}
.topnav a:first-child {
  float: left;
  display: block;
  color: #f2f2f2;
  text-align: center;
  padding: 12px 14px;
  margin-left: 0px;
  text-decoration: none;
  font-size: 19px;
  padding-left: 40px;
}
/* ... */

